jump kits fix grid img

--- a/styles/components.less
+++ b/styles/components.less
@@ -225,6 +225,14 @@
             object-fit: contain !important;
         }
     }
+    .grid-img-center {
+        position: relative;
+    }
+    .grid-img-center > * {
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+    }
   }
 
   // How We Do It
